--- a/src/main/resources/static/css/plan-info-style.css
+++ b/src/main/resources/static/css/plan-info-style.css
@@ -3,17 +3,17 @@
 @import '../css/__navigation.css';
 @import '../css/__footer.css';
 
+/*Mobile plan-generator starts*/
 .plan-info-page {
     font-family: "Now", sans-serif;
 }
-
 /* Header starts */
 .header__wrapper {
     width: 100%;
     margin-top: 73px;
     padding: 53px 40px;
     background-color: var(--light-gray);
-
+    border-radius: 0px 0px 40px 40px;
 }
 
 h1 {
@@ -45,10 +45,7 @@ h1 {
     top: -5px;
     margin: 0 auto 40px;
 }
-
 /* Header ends */
-
-/* Planner-form starts*/
 
 /*Diet form starts*/
 .diet-types__wrapper {
@@ -78,8 +75,8 @@ h1 {
 
 .subform__header {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: baseline;
+    justify-content: start;
     gap: 20px;
     margin: 0 40px;
 }
@@ -122,7 +119,7 @@ input[type="range"] {
     justify-content: center;
     gap: 10px;
     padding: 20px;
-    background-color: var(--light-gray);
+    background-color: var(--gray);
     border-radius: 15px;
     width: 80%;
 }
@@ -139,11 +136,7 @@ input[type="range"] {
     align-items: center;
     margin: 40px 20px;
     gap: 10px;
-
-}
-
-.product-scroll-container {
-    height: 400px;
+    max-height: 400px;
     overflow-y: auto;
 }
 
@@ -188,20 +181,24 @@ input[type="range"] {
 }
 
 .ui-menu {
-    background-color: var(--white);
+    background-color: var(--gray);
     height: 135px;
     overflow: auto;
     top: 1px;
     padding: 8px 12px;
     width: 57vw !important;
-    top: -553px !important;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .ui-menu-item {
     font-size: 13px;
-    color: var(--dark-gray);
+    color: var(--black);
+    list-style-type: none;
+}
+
+.ui-helper-hidden-accessible {
+    display: none;
 }
 
 .products__label--1 {
@@ -221,11 +218,206 @@ input[type="range"] {
     font-weight: 500;
     align-self: center;
     border-radius: 8px;
-    margin-top: 20px;
+    margin-top: 80px;
 }
-
-
 /*Products form ends*/
 
+/*Disliked products form starts*/
+.add-productD {
+    padding: 8px 14px;
+    background-color: var(--orange);
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 500;
+    align-self: center;
+    border-radius: 8px;
+    margin-top: 80px;
+}
 
-/* Planner-form ends*/
+.deleteD {
+    padding: 8px;
+    color: var(--white);
+    background-color: var(--orange);
+    font-size: 25px;
+    border-radius: 8px;
+    height: 43px;
+    width: 43px;
+    margin: 0 auto;
+}
+
+.productsD {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 40px 20px;
+    gap: 10px;
+    max-height: 400px;
+    overflow-y: auto;
+}
+
+.disliked-products-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.productsD .products__label{
+    display: none;
+}
+
+.productsD .products__container {
+    gap: 5px;
+    width: 57vw;
+    padding: 0 20px 20px;
+}
+
+.productsD .product__field {
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    background-color: var(--light-gray);
+}
+/*Disliked products form ends*/
+
+/*Plan day form starts*/
+.calendar-input {
+    display: flex;
+    width: 130px;
+    padding: 8px 12px;
+    font-size: 13px;
+    margin: 40px auto 10px;
+    border-radius: 6px;
+    border: solid 2px var(--gold);
+}
+/*Plan day form ends*/
+
+
+/*Plan form starts*/
+.days {
+    margin: 40px 0;
+}
+.day {
+    display: flex;
+    flex-direction: column;
+}
+.day__header {
+    background-color: var(--orange);
+    color: var(--white);
+    font-size: 20px;
+    text-align: center;
+    padding: 11px 0;
+}
+.cooking__wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    background-color: var(--light-gray);
+    padding: 12px 0;
+}
+
+.eating-plan, .cooking-time {
+    border-radius: 6px;
+    border: none;
+    padding: 8px 12px;
+    font-size: 15px;
+}
+
+.eating-plan {
+    width: 230px;
+}
+
+.cooking-time {
+    width: 75px;
+}
+.plan-form__button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.plan-form__buttons {
+    display: flex;
+    flex-direction: column;
+    margin: 40px 40px;
+    gap: 10px;
+}
+
+.plan-btn {
+    padding: 14px;
+    background-color: var(--orange);
+    color: var(--white);
+    font-size: 25px;
+    font-weight: 500;
+    /* align-self: center; */
+    border-radius: 8px;
+    /* margin-top: 80px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.arrow,
+.buttons__info {
+    color: var(--dark-gray);
+    font-size: 13px;
+}
+
+.buttons__info {
+    width: 200px;
+}
+/*Plan form ends*/
+/*Mobile plan-generator ends*/
+
+/*Desktop plan-generator starts*/
+@media (min-width: 992px) {
+    .planner-form {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+
+        margin: 0 auto;
+        width: 100%;
+        max-width: 1000px;
+    }
+    .days {
+        margin: 0 auto;
+        width: 100%;
+        max-width: 600px;
+    }
+    .form-basis {
+        flex-basis: 50%;
+    }
+    .search {
+        width: 270px;
+    }
+    .ui-menu {
+        width: 270px !important;
+    }
+    .products__label--1 {
+        width: 270px;
+    }
+    .productsD .products__container {
+        width: 270px;
+    }
+    .subform__header {
+        justify-content: center;
+    }
+    .plan-form .products__header {
+        margin: 0 auto 40px;
+        width: 100%;
+        max-width: 800px;
+    }
+    .plan-last-basis{
+        flex-basis: 100%;
+    }
+
+    .header__wrapper {
+        margin: 73px auto 0;
+        max-width: 1000px;
+        text-align: center;
+    }
+
+}
+/*Desktop plan-generator ends*/
+
+
+
+
