--- a/src/main/resources/static/css/home-user-style.css
+++ b/src/main/resources/static/css/home-user-style.css
@@ -48,7 +48,7 @@ main .plan-generator {
   }
   main .plan-generator__btn {
     width: 150px;
-    padding: 9px 18px;
+    height: 34px;
     margin: 190px auto 30px;
     font-size: 14px;
     color: var(--white);
@@ -56,10 +56,23 @@ main .plan-generator {
     border-radius: 11px;
     animation: clickMe 1.5s ease-in-out infinite;
   }
+  main .plan-generator__link {
+    color: var(--white);
+    width: 100%;
+    height: 100%;
+    padding: 9px 18px;
+  }
+  main .plan-generator__link:visited,
+  main .plan-generator__link:active {
+    color: var(--white);
+  }
   @media (min-width: 992px) {
-    main .plan-generator__btn {
-      width: 200px;
+    main .plan-generator__link {
       padding: 15px 18px;
+    }
+    main .plan-generator__btn {
+      height: 50px;
+      width: 200px;
       margin: -230px auto 60px;
       font-size: 20px;
     }
