--- a/src/main/resources/templates/home/home-user.html
+++ b/src/main/resources/templates/home/home-user.html
@@ -19,7 +19,7 @@
             <i class="fa-solid fa-xmark"></i>
         </button>
         <div class="menu">
-            <a class="menu__item" th:href="@{/home/user}">Strona główna</a>
+            <a class="menu__item" style="text-decoration: none;" th:href="@{/home/user}">Strona główna</a>
             <a class="menu__item" th:href="@{/plan/info}">Wygeneruj plan</a>
             <a class="menu__item">Zarządzaj przepisami</a>
             <a class="menu__item" th:href="@{/wyszukiwarka}">Wyszukaj przepis</a>
