--- a/src/main/resources/templates/plangenerator/plan-info.html
+++ b/src/main/resources/templates/plangenerator/plan-info.html
@@ -167,7 +167,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="btn-submit__wrapper">
                 <button type="submit" class="btn-submit-all">Zatwierdź i stwórz plan</button>
             </div>
         </form>
