--- a/src/main/resources/templates/home/home-guest.html
+++ b/src/main/resources/templates/home/home-guest.html
@@ -80,6 +80,33 @@
     </div>
     <div class="login-form__background"></div>
     <main>
+
+        <section class="plan-generator">
+            <div class="graphic">
+                <img class="graphic__image" th:src="@{/images/Talerz.png}" alt="talerz z pizzą">
+                <img class="graphic__image2 image_dsc" th:src="@{/images/u_485kmhchiv_jasny.png}"
+                    alt="talerz z kurczakiem">
+                <img class="graphic__image3 image_dsc" th:src="@{/images/marker_photography_v2.png}"
+                    alt="Talerz z tagiatelle">
+            </div>
+            <button class="plan-generator__btn">
+                <a class="plan-generator__link" th:href="@{/register}">Wygeneruj plan!</a>
+            </button>
+        </section>
+        <section class="plan-info container">
+            <img class="plan-info__image" th:src="@{/images/triangle.svg}" alt="trójkąt - od dymku z informacjami">
+
+            <div class="plan-info-wrapper">
+                <h2 class="plan-info__header">Wygeneruj spresonalizowany plan posiłków na cały tydzień!</h2>
+                <p class="content plan-info__text">Ten przycisk przeniesie Cię do specjalnego generatora posiłków,
+                    gdzie
+                    będziesz mógł wybrać dietę, ilość porcji, którą zamierzasz przygotować na dany dzień czy produkty,
+                    których potrzebujesz oraz wiele innych.</p>
+                <p class="content plan-info__ps">
+                    Nie zwlekaj i sprawdź co dla Ciebie przygotowaliśmy. </p>
+            </div>
+        </section>
+
         <section class="about-us container">
             <h2 class="about-us__header">Co znajdziesz na naszej stronie?</h2>
             <div class="about-us__wrapper">
