plan-genrator poprawki

--- a/src/main/resources/static/css/plan-info-style.css
+++ b/src/main/resources/static/css/plan-info-style.css
@@ -486,6 +486,14 @@ input[type="range"] {
         cursor: pointer;
     }
 
+    .plan-btn {
+        transition: background-color .4s;
+    }
+
+    .plan-btn:hover {
+        background-color: var(--gold);
+    }
+
 }
 /*Desktop plan-generator ends*/
 
