--- a/src/main/resources/templates/plangenerator/plan-info.html
+++ b/src/main/resources/templates/plangenerator/plan-info.html
@@ -86,7 +86,6 @@
                         <p class="diet-type__name">Nie mam diety</p>
                     </div>
                 </div>
-                <button class="test-btn" type="button" onclick="submitForm()">Submit</button>
             </div>
 
             <div class="portions-form form-basis">
@@ -168,7 +167,7 @@
                 </div>
             </div>
             <div class="btn-submit__wrapper">
-                <button type="submit" class="btn-submit-all">Zatwierdź i stwórz plan</button>
+                <button type="submit" onclick="submitForm()" class="btn-submit-all">Zatwierdź i stwórz plan</button>
             </div>
         </form>
 
