--- a/src/main/resources/templates/browser/searcher.html
+++ b/src/main/resources/templates/browser/searcher.html
@@ -2,30 +2,53 @@
 <html>
 <head>
     <title>Przepisy</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script th:src="@{'/js/searcher-recipe.js'}"></script>
 </head>
 <body>
-<h1>Wyszukiwarka przepisów</h1>
+<h1>Wyszukaj przepis</h1>
 
-// wyszukiwarka do wstawienia
+<div id="recipe-search-wrapper">
+    <!-- Tutaj zostanie dodane pole wyszukiwania przez skrypt JS -->
+</div>
 
-<form method="post" th:action="@{/wyszukiwarka}">
+<script>
+    $(document).ready(function() {
+        // Inicjalizacja wyszukiwarki przepisów
+        initializeRecipeFields('#recipe-search-wrapper', 'recipe');
+    });
+</script>
+
+<form method="post" th:action="@{/wyszukiwarka/wybrana-dieta}">
+    <select name="diet" onchange="removeDefaultOption(this)">
+        <option value="" disabled selected>Wybierz dietę</option>
+        <option th:each="diet : ${diets}" th:text="${diet}" th:value="${diet}"></option>
+    </select>
     <button type="submit">Losuj</button>
 </form>
 
-<form method="post" th:action="@{/wyszukiwarka/wegetarianskie}">
-    <button type="submit">Wegetariańskie</button>
-</form>
 
-<form method="post" th:action="@{/wyszukiwarka/miesne}">
-    <button type="submit">Mięsne</button>
-</form>
+// obsługa poprawnego wyświetlania pola wyboru diety
 
-
+<script>
+    function removeDefaultOption(selectElement) {
+        selectElement.options[0].disabled = true;
+        if (selectElement.selectedIndex === 0) {
+            selectElement.selectedIndex = -1;
+        }
+    }
+</script>
 
 <ul>
     <li th:each="recipe : ${recipes}">
         <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.nazwa()}"></a>
     </li>
 </ul>
+
+
+
 </body>
 </html>
