Zapisywanie listy zakupów w bazie, wyświetlanie planu i listy

--- a/src/main/resources/templates/details/user-details.html
+++ b/src/main/resources/templates/details/user-details.html
@@ -8,5 +8,8 @@
 <p>Login: <span th:text="${username}"></span></p>
 <p>Role: <span th:text="${role}"></span></p>
 <!-- Inne pola użytkownika, jeśli są -->
+
+<a th:href="@{/plan/groceryList}">Zobacz twój plan posiłków</a>
+
 </body>
 </html>
