--- a/src/main/resources/templates/plangenerator/saved-plan.html
+++ b/src/main/resources/templates/plangenerator/saved-plan.html
@@ -22,11 +22,11 @@
 <div>
     <div th:each="element : ${plan}">
         <div th:if="${element.recipeDisplay().id().equals('EMPTY_DAY_ID')}">
-            <p th:text="${element.dayOfWeek().getDayOfWeek()} + ': ' + ${element.dayOfWeek()}"></p>
+            <p th:text="${element.dayOfWeek()} + ': ' + ${element.date()}"></p>
             <p>Masz wolne :)</p>
         </div>
         <div th:if="${!element.recipeDisplay().id().equals('EMPTY_DAY_ID')}">
-            <p th:text="${element.dayOfWeek().getDayOfWeek()} + ': ' + ${element.dayOfWeek()}"></p>
+            <p th:text="${element.dayOfWeek()} + ': ' + ${element.date()}"></p>
             <p th:text="${element.recipeDisplay().name()}"></p>
             <p>Składniki:</p>
             <ul>
