wyszukiwarka bez zdjęć gotowa

--- a/src/main/resources/static/css/__animations.css
+++ b/src/main/resources/static/css/__animations.css
@@ -9,3 +9,15 @@
         transform: scale(1);
     }
 }
+
+@keyframes pulse {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(2px);
+    }
+    100% {
+        transform: translateX(0px);
+    }
+}
