--- a/src/main/resources/static/css/searcher-style.css
+++ b/src/main/resources/static/css/searcher-style.css
@@ -9,52 +9,63 @@
     font-family: "Now", sans-serif;
 }
 .hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
     position: relative;
-    margin-top: 73px;
     width: 100%;
-}
-
-.hero__graphic {
-    position: absolute;
-    width: 100%;
-    height: 300px;
+    height: 500px;
     overflow: hidden;
-    left: 50%;
-    z-index: -1;
-    transform: translate(-50%, 0);
 }
-
 .hero__image{
-    position: absolute;
+    display: block;
     width: 100%;
-    left: 50%;
-    z-index: -1;
-    transform: translate(-50%, 0);
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+}
+.hero__image-large {
+    display: none;
 }
 .hero__text {
-    margin-top: 15vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
+    color: #fff;
 }
 h1 {
-    font-size: 24px;
+    font-size: 26px;
     color: var(--white);
     line-height: 32px;
-    letter-spacing: 3px;
+    letter-spacing: 5px;
     margin-bottom: 10px;
     max-width: 300px;
+}
+@media (min-width: 992px) {
+    h1 {
+        font-size: 30px;
+        line-height: 50px;
+        letter-spacing: 5px;
+        margin-bottom: 15px;
+        width: auto;
+        text-transform: uppercase;
+    }
 }
 .browser__text-content {
     color: var(--gold);
     font-size: 14px;
     line-height: 19px;
 }
-.recipes-browsing-field {
-    margin-top: 190px;
+@media (min-width: 992px) {
+    .browser__text-content {
+        font-size: 17px;
+        letter-spacing: 2px;
+    }
 }
-
+.recipes-browsing-field {
+    margin-top: 40px;
+}
 /*Hero graphic ends*/
 
 /*Browser starts*/
@@ -65,24 +76,33 @@ h1 {
     border: 1px solid var(--gray);
     box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.15);
 }
-
+@media (min-width: 450px) {
+    .browser__input {
+        width: 50vw;
+        padding: 12px 18px;
+        font-size: 16px;
+    }
+}
 .fa-magnifying-glass {
     font-size: 34px;
     color: var(--gold);
 }
-/* .browser__wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-} */
-
 .browser__container {
     display: flex;
+    flex-wrap: wrap;
     position: relative;
     justify-content: center;
     align-items: center;
     gap: 8px;
+}
+@media (min-width: 450px) {
+    .browser__container {
+        display: flex;
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        gap: 8px;
+    }
 }
 
 .browser__wrapper {
@@ -90,20 +110,37 @@ h1 {
     align-items: center;
     gap: 10px;
 }
-
 .draw-btn__wrapper {
     display: flex;
     align-items: center;
     gap: 10px;
     position: absolute;
     bottom: 50px;
-    top: 270px;
+    top: 230px;
     left: 50%;
     transform: translate(-50%, 0);
 }
+@media (min-width: 450px) {
+    .draw-btn__wrapper{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        position: absolute;
+        bottom: 50px;
+        top: 220px;
+        left: 50%;
+        transform: translate(-50%, 0);
+    }
+}
 .browser__form {
     display: flex;
-    margin-top: 190px;
+    margin-top: 10px;
+    align-self: flex-end;
+}
+@media (min-width: 450px) {
+    .browser__form {
+        margin-top: 40px;
+    }
 }
 .draw-btn {
     display: flex;
@@ -114,6 +151,15 @@ h1 {
     border-radius: 50px;
     background-color: var(--gold);
 }
+@media (min-width: 992px) {
+    .draw-btn {
+        transition: all .3s ease-in-out 0s;
+    }
+    .draw-btn:hover{
+        transform: translateY(2px);
+        background-color: var(--orange);
+    }
+}
 
 .draw-btn__info {
     font-size: 14px;
@@ -122,19 +168,20 @@ h1 {
 }
 
 .fa-arrow-left {
-    font-size: 12px;
+    font-size: 14px;
     color: var(--gold);
+    animation: pulse .8s ease-in-out infinite;
+}
+@media (min-width: 992px) {
+    .fa-arrow-left {
+        animation: pulse .8s ease-in-out infinite;
+    }
 }
 
 .fa-dice {
     font-size: 30px;
     color: var(--white);
 }
-
-ul {
-    margin-top: 100px;
-}
-
 .select-diet {
     width: 150px;
     padding: 8px 14px;
@@ -143,11 +190,61 @@ ul {
     background-color: var(--gold);
     color: var(--white);
 }
-
+@media (min-width: 450px) {
+    .select-diet {
+        width: 160px;
+        padding: 12px 18px;
+    }
+}
+@media (min-width: 992px) {
+    .select-diet {
+        width: 180px;
+        font-size: 16px;
+    }
+}
 .select-diet__option {
     background-color: var(--white);
     color: var(--black);
     line-height: 10px;
+    accent-color: gold;
+}
+.select-diet__option:hover {
+    background-color: gold;
+}
+.ui-menu {
+    font-family: "Now", sans-serif;
+    padding: 8px 14px;
+    font-size: 16px;
+    border-radius: 6px;
+    width: 100px;
+    max-height: 80px;
+    overflow: auto;
+    min-height: 60px;
+}
+.recipe-container__item {
+    width: 100%;
+    height: 186px;
+    font-size: 16px;
+}
+.browser__recipes-container {
+    margin-top: 250px;
+}
+@media (min-width: 450px) {
+    .hero__image {
+        display: none;
+    }
+    .hero__image-large {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        position: absolute;
+        transform: rotate(180deg);
+    }
+    .hero {
+        height: 550px;
+    }
 }
 /*Browser ends*/
 
