--- a/src/main/resources/templates/browser/searcher.html
+++ b/src/main/resources/templates/browser/searcher.html
@@ -33,12 +33,13 @@
         </div>
     </nav>
     <header class="browser__hero hero">
+        <img th:src="@{/images/51581.jpg}" alt="Równo ułożone talerze z jedzeniem - mała rozdzielczość"
+            class="hero__image">
+        <img th:src="@{/images/talerze_wieksze.jpg}" alt="Równo ułożone talerze z jedzeniem - duża rozdzielczość"
+            class="hero__image-large">
         <div class="hero__text">
             <h1>Wyszukiwarka przepisów</h1>
             <p class="browser__text-content">Wyszukaj lub wylosuj przepisy</p>
-        </div>
-        <div class="hero__graphic">
-            <img th:src="@{/images/51581.jpg}" alt="Równo ułożone talerze z jedzeniem" class="hero__image">
         </div>
     </header>
 
@@ -61,11 +62,19 @@
         </form>
     </section>
 
-    <ul>
-        <li th:each="recipe : ${recipes}">
-            <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.nazwa()}"></a>
-        </li>
-    </ul>
+    <section class="random-recipes">
+        <ul class="browser__recipes-container">
+            <li th:each="recipe : ${recipes}" class="recipe-container__item">
+                <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.nazwa()}"
+                    class="recipe-container__link">
+                    <img th:src="@{/images/kasza-jaglana.jpg}" alt="Kasza jaglana">
+                    <!-- Fajnie byłoby tutaj dodać zdjęcie z bazy -->
+                    <div class="decor-line"></div>
+                </a>
+            </li>
+        </ul>
+    </section>
+
 
     <footer class="footer">
         <div class="footer__section contact">
